--- a/src/styles/chart.module.scss
+++ b/src/styles/chart.module.scss
@@ -274,14 +274,20 @@
   padding: 20px;
 }
 
-.chartCard {
-  background: #121212;
-  padding: 20px;
-  border-radius: 10px;
+.chart-card {
+  background-color: #1e1e1e;
+  padding: 1.5rem;
+  border-radius: 12px;
   color: white;
-  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
-  text-align: center;
+  flex: 1 1 400px; /* Minimum width increased */
+  min-height: 380px; /* Increased height */
+  max-width: 100%;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
+
 
 .chartCard h2 {
   font-size: 18px;
